--- a/index.html
+++ b/index.html
@@ -10,7 +10,16 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-	</head>
+		<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-8W3Y3FBK07"></script>
+		<script>
+  			window.dataLayer = window.dataLayer || [];
+  			function gtag(){dataLayer.push(arguments);}
+ 		 	gtag('js', new Date());
+
+  			gtag('config', 'G-8W3Y3FBK07');
+		</script>
+	</head>	
 	<body class="is-preload">
 
 		<!-- Wrapper -->
