Edited resume and added menu to aboutme section

--- a/index.html
+++ b/index.html
@@ -171,7 +171,8 @@
 										<li><a href="index.html">Homepage</a></li>
 										<li><a href="aboutme.html">About Me</a></li>
 										<li><a href="myprojects.html">My Projects </a></li>
-										<li><a href="#"> My Resume</a></li>
+										<li><a href="myresume.html">My Resume </a></li>
+										
 									</ul>
 								</nav>
 
