--- a/myresume.html
+++ b/myresume.html
@@ -1,71 +1,142 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
+<!--
+    Based on Editorial by HTML5 UP
+-->
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Justice Jones | Resume</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
-<body>
-    <header>
-        <h1>Justice Jones</h1>
-        <p>Business Analytics &amp; Information Systems (BAIS) and Marketing</p>
-        <p>University of Iowa – Tippie College of Business</p>
-    </header>
+    <head>
+        <title>Justice Jones | My Résumé</title>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+        <!-- Make sure this matches your index.html -->
+        <link rel="stylesheet" href="assets/css/main.css" />
+    </head>
+    <body class="is-preload">
 
-    <main>
-        <!-- Downloadable resume link -->
-        <section>
-            <h2>Download My Résumé</h2>
-            <p>
-                You can view or download my full résumé here:
-            </p>
-            <p>
-                <!-- Change the filename below if your PDF has a different name -->
-                <a href="./justice_jones_resume.pdf" download>
-                    Download Résumé (PDF)
-                </a>
-            </p>
-        </section>
+        <!-- Wrapper -->
+        <div id="wrapper">
 
-        <!-- College experience -->
-        <section>
-            <h2>College Experience</h2>
-            <p>
-                I am a senior at the University of Iowa studying Business Analytics &amp; Information Systems (BAIS) 
-                and Marketing at the Tippie College of Business. My coursework has focused on data wrangling, 
-                data mining, digital product management, and marketing analytics.
-            </p>
-            <p>
-                I’ve worked on several hands-on projects, including building data pipelines and predictive models, 
-                creating interactive dashboards, and developing a personal portfolio website as part of my 
-                Digital Product Management course. These projects have helped me get comfortable working with data, 
-                telling stories with it, and thinking about how real users interact with digital products.
-            </p>
-        </section>
+            <!-- Main -->
+            <div id="main">
+                <div class="inner">
 
-        <!-- Work & other experience -->
-        <section>
-            <h2>Work & Professional Experience</h2>
-            <p>
-                Outside the classroom, I’ve worked as a follow-spot operator for events at Carver-Hawkeye Arena, 
-                where I’ve learned to stay focused under pressure, communicate clearly with a crew, and pay close 
-                attention to timing and detail during live events.
-            </p>
-            <p>
-                I’ve also been involved in projects that required coordinating with classmates, professors, and 
-                professionals, which has strengthened my teamwork, communication, and problem-solving skills. 
-                I enjoy roles where I can combine data, technology, and practical decision-making to create 
-                something useful.
-            </p>
-        </section>
+                    <!-- Page Header -->
+                    <header id="header">
+                        <h1>My Résumé</h1>
+                        <p>Business Analytics &amp; Information Systems &amp; Marketing • University of Iowa</p>
+                    </header>
 
-        <!-- Optional contact info -->
-        <section>
-            <h2>Contact</h2>
-            <p>Email: <a href="mailto:your-email@uiowa.edu">your-email@uiowa.edu</a></p>
-            <p>LinkedIn: <a href="https://www.linkedin.com" target="_blank">Your LinkedIn Profile</a></p>
-            <p>GitHub: <a href="https://github.com" target="_blank">Your GitHub Profile</a></p>
-        </section>
-    </main>
-</body>
+                    <!-- Downloadable Resume Section -->
+                    <section>
+                        <header class="major">
+                            <h2>Download My Résumé</h2>
+                        </header>
+                        <p>
+                            You can view or download my full résumé as a PDF using the link below.
+                        </p>
+                        <ul class="actions">
+                            <li>
+                                <!-- Change filename if needed -->
+                                <a href="./justice_jones_resume.pdf" class="button icon solid fa-download" download>
+                                    Download Résumé (PDF)
+                                </a>
+                            </li>
+                        </ul>
+                    </section>
+
+                    <!-- College Experience -->
+                    <section>
+                        <header class="major">
+                            <h2>College Experience</h2>
+                        </header>
+                        <p>
+                            I am a senior at the University of Iowa studying Business Analytics &amp; Information
+                            Systems (BAIS) and Marketing in the Tippie College of Business. My coursework has
+                            focused on data wrangling, data mining, digital product management, and marketing analytics.
+                        </p>
+                        <p>
+                            I’ve worked on hands-on projects like building predictive models, analyzing real datasets,
+                            and developing a personal portfolio website for Digital Product Management. These projects
+                            have helped me get comfortable working with data, thinking about users, and building
+                            practical solutions.
+                        </p>
+                    </section>
+
+                    <!-- Work & Professional Experience -->
+                    <section>
+                        <header class="major">
+                            <h2>Work &amp; Professional Experience</h2>
+                        </header>
+                        <p>
+                            Outside the classroom, I work as a follow-spot operator for events at Carver-Hawkeye Arena.
+                            In that role, I’ve learned to stay focused under pressure, communicate clearly with a crew,
+                            and pay close attention to timing and detail during live events.
+                        </p>
+                        <p>
+                            I’ve also worked on group projects that required coordinating with classmates and
+                            professionals, which has strengthened my teamwork, communication, and problem-solving
+                            skills. I enjoy roles where I can combine data, technology, and practical decision-making.
+                        </p>
+                    </section>
+
+                    <!-- Contact / Links -->
+                    <section>
+                        <header class="major">
+                            <h2>Contact &amp; Links</h2>
+                        </header>
+                        <p>
+                            Email:
+                            <a href="mailto:your-email@uiowa.edu">your-email@uiowa.edu</a>
+                            <br />
+                            LinkedIn:
+                            <a href="https://www.linkedin.com" target="_blank" rel="noopener">
+                                Your LinkedIn Profile
+                            </a>
+                            <br />
+                            GitHub:
+                            <a href="https://github.com" target="_blank" rel="noopener">
+                                Your GitHub Profile
+                            </a>
+                        </p>
+                    </section>
+
+                </div>
+            </div>
+
+            <!-- Sidebar -->
+            <div id="sidebar">
+                <div class="inner">
+
+                    <!-- Search -->
+                    <section id="search" class="alt">
+                        <form method="post" action="#">
+                            <input type="text" name="query" id="query" placeholder="Search" />
+                        </form>
+                    </section>
+
+                    <!-- Menu -->
+                    <nav id="menu">
+                        <header class="major">
+                            <h2>Menu</h2>
+                        </header>
+                        <ul>
+                            <li><a href="index.html">Homepage</a></li>
+                            <li><a href="aboutme.html">About Me</a></li>
+                            <li><a href="myprojects.html">My Projects</a></li>
+                            <li><a href="myresume.html">My Resume</a></li>
+                        </ul>
+                    </nav>
+
+                </div>
+            </div>
+
+        </div>
+
+        <!-- Scripts (copy these from your index.html if needed) -->
+        <script src="assets/js/jquery.min.js"></script>
+        <script src="assets/js/browser.min.js"></script>
+        <script src="assets/js/breakpoints.min.js"></script>
+        <script src="assets/js/util.js"></script>
+        <script src="assets/js/main.js"></script>
+
+    </body>
 </html>
