--- a/index.html
+++ b/index.html
@@ -24,6 +24,16 @@
   		<link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
   		<link rel="icon" type="image/png" sizes="192x192" href="./android-chrome-192x192.png"> 
   		<link rel="icon" type="image/png" sizes="512x512" href="./android-chrome-512x512.png">   
+
+			<meta name="description" content="Justice Jones' personal portfolio website">
+  			
+  			<!-- Open Graph meta tags -->
+  			<meta property="og:type" content="website">
+  			<meta property="og:title" content="Justice Jones | BAIS & Marketing">
+  			<meta property="og:description" content="Projects I have done as a BAIS and Marketing student at the Unviersity of Iowa">
+  			<meta property="og:image" content="https://www.justicesjones.com/images/jjheader.jpg">
+  			<meta property="og:url" content="https://ww.justicesjones.com">
+
 	</head>	
 	<body class="is-preload">
 
