Add privacy policy

--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -161,6 +161,33 @@
 										<li class="icon solid fa-phone">(319) 325-7330</li>										
 									</ul>
 								</section>
+
+                                <section>
+                                    <h2>Privacy Policy</h2>
+                                    <p>
+                                        This website is a personal portfolio created by Justice Jones. I do not ask visitors
+                                        to create accounts, submit forms, or provide personal information directly.
+                                    </p>
+                                    <p>
+                                        The only data collected comes from Google Analytics, which gathers basic, non-identifying
+                                        information such as pages visited, time spent on the site, approximate location, device type,
+                                        and how visitors arrived here. This information is used only to understand general site traffic
+                                        and improve the website.
+                                    </p>
+                                    <p>
+                                         Cookies may be used by Google Analytics for tracking and reporting. You may disable cookies
+                                        through your browser settings at any time.
+                                    </p>
+                                    <p>
+                                        This site may contain links to external pages (such as LinkedIn or GitHub). These sites have
+                                        their own privacy policies and are not covered by this one.
+                                    </p>
+                                    <p>
+                                        If you have questions, you can contact me at:
+                                    <a href="mailto:your-email@uiowa.edu">your-email@uiowa.edu</a>.
+                                    </p>
+                                </section>
+
 							
 							<!-- Footer -->
 								<footer id="footer">
