--- a/index.html
+++ b/index.html
@@ -96,6 +96,11 @@
 												<h3>Resume</h3>Information about my work and college experiences and a downloadable pdf resume.</p>
 											</div>
 										</article>										
+										<!-- Footer -->
+										<footer id="footer">
+											<p class="copyright">&copy; Justice Jones, 2025: <a href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+											<p><a href="privacy.html">Privacy Policy</a></p>
+										</footer>
 									</div>
 								</section>							
 						</div>
