Add more customization and finish about page

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 									<header class="major">
 										<h2>Get in touch</h2>
 									</header>
-									<p>Sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin sed aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+									<p>If you’d like to connect, feel free to reach out with questions about my work, projects, or anything related to analytics, marketing, or my portfolio.</p>
 									<ul class="contact">
 										<li class="icon solid fa-envelope"><a href="#">justicesj03@gmail.com</a></li>
 										<li class="icon solid fa-phone">(319) 325-7330</li>										
