Add projects and customize

--- a/aboutme.html
+++ b/aboutme.html
@@ -10,6 +10,14 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+
+		<!-- Favicon (same as index.html) -->
+	    <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
+  		<link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
+  		<link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
+  		<link rel="icon" type="image/png" sizes="192x192" href="./android-chrome-192x192.png"> 
+  		<link rel="icon" type="image/png" sizes="512x512" href="./android-chrome-512x512.png">   
+	
 	</head>
 	<body class="is-preload">
 
@@ -88,7 +96,7 @@
 									<header class="major">
 										<h2>Get in touch</h2>
 									</header>
-									<p>Sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin sed aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+									<p>If you'd like to connect, feel free to reach out with questions about my work, projects, or anything related to analytics, marketing, or my portfolio.</p>
 									<ul class="contact">
 										<li class="icon solid fa-envelope"><a href="#">justicesj03@gmail.com</a></li>
 										
