--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
 										<article>
 											<span class="icon solid fa-rocket"></span>
 											<div class="content">
-												<h3>Resume</h3>Information about my work and college experiences and a downloadable pdf resume.</p>
+												<h3>Resume</h3>
+												<p>Information about my work and college experiences and a downloadable pdf resume.</p>
 											</div>
 										</article>	
 										
