Trying to fix resume download button

--- a/myresume.html
+++ b/myresume.html
@@ -4,7 +4,7 @@
 -->
 <html lang="en">
     <head>
-        <title>Justice Jones | My Résumé</title>
+        <title>Justice Jones | My Resume</title>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
         <!-- Make sure this matches your index.html -->
@@ -21,25 +21,26 @@
 
                     <!-- Page Header -->
                     <header id="header">
-                        <h1>My Résumé</h1>
+                        <h1>My Resume</h1>
                         <p>Business Analytics &amp; Information Systems &amp; Marketing • University of Iowa</p>
                     </header>
 
                     <!-- Downloadable Resume Section -->
                     <section>
                         <header class="major">
-                            <h2>Download My Résumé</h2>
+                            <h2>Download My Resume</h2>
                         </header>
                         <p>
-                            You can view or download my full résumé as a PDF using the link below.
+                            You can view or download my full resume as a PDF using the link below.
                         </p>
                         <ul class="actions">
                             <li>
                                 <!-- Change filename if needed -->
-                                <a href="./justice_jones_resume.pdf" class="button icon solid fa-download" download>
-                                    Download Résumé (PDF)
+                                <a href="Projects/justice_jones_resume.pdf" download class="button icon solid fa-download">
+                                    Download Resume (PDF)
                                 </a>
                             </li>
+                           
                         </ul>
                     </section>
 
@@ -54,10 +55,11 @@
                             focused on data wrangling, data mining, digital product management, and marketing analytics.
                         </p>
                         <p>
-                            I’ve worked on hands-on projects like building predictive models, analyzing real datasets,
-                            and developing a personal portfolio website for Digital Product Management. These projects
-                            have helped me get comfortable working with data, thinking about users, and building
-                            practical solutions.
+                             I’ve worked on hands-on projects like building predictive models, analyzing real datasets,
+                            and developing a personal portfolio website for Digital Product Management. I’ve also been
+                            a member of the HawkTrade Investment Club, which has given me more exposure to financial
+                            markets and investment thinking. These projects and experiences have helped me get
+                            comfortable working with data, thinking about users, and building practical solutions.
                         </p>
                     </section>
 
@@ -67,14 +69,24 @@
                             <h2>Work &amp; Professional Experience</h2>
                         </header>
                         <p>
-                            Outside the classroom, I work as a follow-spot operator for events at Carver-Hawkeye Arena.
-                            In that role, I’ve learned to stay focused under pressure, communicate clearly with a crew,
-                            and pay close attention to timing and detail during live events.
+                            I currently work part-time with Sound Concepts as a follow-spot operator for University of Iowa events, 
+	                        including basketball games, wrestling meets, and other large productions. It’s a role that requires staying 
+	                        focused, communicating clearly with a production team, and reacting quickly in a fast-moving environment. 
+	                        Working behind the scenes at live events has taught me a lot about being dependable and calm when things 
+	                        are happening in real time.
                         </p>
+                        <p>	This past summer I completed an Operations Internship with Houses into Homes, a local nonprofit that supports 
+	                        families and individuals transitioning into stable housing. I helped evaluate and improve their inventory process, 
+	                        focusing on how items like bedframes and rugs were tracked and organized. We were able to restructure parts of the 
+	                        system to make it more accurate and easier for volunteers to use. I enjoyed being part of the organization and 
+                        	contributing to work that directly helps people in the community.</p>
                         <p>
-                            I’ve also worked on group projects that required coordinating with classmates and
-                            professionals, which has strengthened my teamwork, communication, and problem-solving
-                            skills. I enjoy roles where I can combine data, technology, and practical decision-making.
+                           	During that same summer, I also worked with ProLift Garage Doors, where I handled general administrative tasks,
+	                        supported business development efforts, and took on customer-facing sales responsibilities. That role gave me a 
+	                        clearer understanding of how a service business operates day-to-day and how organization and communication shape the 
+	                        customer experience. Alongside that, I worked part-time with Schlabach Construction doing framing work. I’ve always 
+	                        enjoyed building things with my hands, and construction gave me the chance to step away from screens and see a 
+	                        physical result at the end of the day.
                         </p>
                     </section>
 
