Fixed resume button

--- a/myresume.html
+++ b/myresume.html
@@ -25,22 +25,22 @@
                         <p>Business Analytics &amp; Information Systems &amp; Marketing • University of Iowa</p>
                     </header>
 
-                    <!-- Downloadable Resume Section -->
+                    <!-- Downloadable Resume Section -->                 
                     <section>
                         <header class="major">
-                            <h2>Download My Resume</h2>
+                             <h2>Download My Resume</h2>
                         </header>
                         <p>
-                            You can view or download my full resume as a PDF using the link below.
+                        You can view or download my full resume as a PDF using the link below.
                         </p>
                         <ul class="actions">
-                            <li>
-                                <!-- Change filename if needed -->
-                                <a href="Projects/justice_jones_resume.pdf" download class="button icon solid fa-download">
-                                    Download Resume (PDF)
+                             <li>
+                                <a href="./Projects/justice_jones_resume.pdf"
+                                    download
+                                    class="button icon solid fa-download">
+                                     Download Resume (PDF)
                                 </a>
                             </li>
-                           
                         </ul>
                     </section>
 
