Fixed bike library case pdf & added emojis

--- a/myprojects.html
+++ b/myprojects.html
@@ -60,7 +60,7 @@
 
 									<div class="posts">
 										<article>
-											<h3>Iowa City Bike Library Engagement Survey Case</h3>
+											<h3>🚲Iowa City Bike Library Engagement Case</h3>
 											<p>
 												Worked with a small team to analyze survey data for the Iowa City Bike Library, focusing on
 												awareness, engagement, and interest across different age groups, genders, and University of
@@ -69,14 +69,14 @@
 												then summarized key findings and marketing recommendations for the organization.
 											</p>
 											<p>
-											<a href="Projects/IC_BikeLibrary_Engagement.pdf" target="_blank" class="button small">
+											<a href="Projects/IC_BikeLibrary_Case.pdf" target="_blank" class="button small">
 												View Project (PDF)
 											</a>
 											</p>
 										</article>
 
 										<article>
-											<h3>Cubs Naming Rights Valuation Analysis</h3>
+											<h3>🧢Cubs Naming Rights Valuation Analysis⚾</h3>
 											<p>
 												This project analyzed what drives stadium naming rights revenue in Major League Baseball and 
 												estimated a fair naming rights value for the Chicago Cubs. Using data on payroll, ticket 
@@ -88,14 +88,14 @@
 												approximately $6.86 million per year for the Cubs.
 											</p>
 											<p>
-												<a href="projects/CubsNamingRights.pdf" target="_blank" class="button small">
+												<a href="Projects/CubsNamingRights.pdf" target="_blank" class="button small">
 													View Project (PDF)
 												</a>
 											</p>
 										</article>
 
 										<article>
-											<h3>Predicting NFL Passer Rating</h3>
+											<h3>Predicting NFL Passer Rating🏈</h3>
 											<p>
 												This was a sophomore-year project for my Foundations of Business Analytics course. 
 												Working with a team, I used data from 50 NFL quarterbacks and built a multiple 
@@ -105,10 +105,31 @@
 												data and statistical modeling.
 											</p>
 											<p>
-												<a href="projects/Predicting_Passer_Rating.pdf" target="_blank" class="button small">
+												<a href="Projects/Predicting_Passer_Rating.pdf" target="_blank" class="button small">
 													View Project (PDF)
 												</a>
 											</p>
+										</article>
+
+										<article>
+    										<h3>🍻Big Grove Brewery Case Competition: Insights on Tap🍻</h3>
+    										<p>
+        										Worked with a team to analyze survey data for Big Grove Brewery and identify the most 
+												strategic customer segments for growth. Using clustering, segmentation analysis, and 
+												behavioral indexing, we uncovered two high-impact groups with very different motivations 
+												and loyalty patterns. Our team built recommendations around home-brew kits, taproom 
+												experiences, and loyalty programs to increase engagement and visitation among these segments. 
+												The project was presented to judges and Big Grove representatives—and ultimately won first 
+												place in the competition.
+    										</p>
+    										<p>
+        										<a href="Projects/BG_Insights_On_Tap.pdf" target="_blank" class="button small">
+            										View Project (PDF)
+        										</a>
+    										</p>
+											<p>
+												<img src="images/ma_bg_case_award.jpg" alt="Big Grove reps (left) and my Case Team(right: Me, Chase, Ella)" style="width:100%; border-radius:6px;" />
+											</p> 
 										</article>
 									</div>
 
