Added project and changed project names

--- a/myprojects.html
+++ b/myprojects.html
@@ -60,7 +60,7 @@
 
 									<div class="posts">
 										<article>
-											<h3>🚲Iowa City Bike Library Engagement Case</h3>
+											<h3>🚲 Iowa City Bike Library Engagement Case</h3>
 											<p>
 												Worked with a small team to analyze survey data for the Iowa City Bike Library, focusing on
 												awareness, engagement, and interest across different age groups, genders, and University of
@@ -76,7 +76,7 @@
 										</article>
 
 										<article>
-											<h3>🧢Cubs Naming Rights Valuation Analysis⚾</h3>
+											<h3>🧢 Cubs Naming Rights Valuation Analysis ⚾</h3>
 											<p>
 												This project analyzed what drives stadium naming rights revenue in Major League Baseball and 
 												estimated a fair naming rights value for the Chicago Cubs. Using data on payroll, ticket 
@@ -95,7 +95,7 @@
 										</article>
 
 										<article>
-											<h3>Predicting NFL Passer Rating🏈</h3>
+											<h3>Predicting NFL Passer Rating 🏈</h3>
 											<p>
 												This was a sophomore-year project for my Foundations of Business Analytics course. 
 												Working with a team, I used data from 50 NFL quarterbacks and built a multiple 
@@ -112,7 +112,7 @@
 										</article>
 
 										<article>
-    										<h3>🍻Big Grove Brewery Case Competition: Insights on Tap🍻</h3>
+    										<h3>🍻 Big Grove Brewery Case Competition: Insights on Tap 🍻</h3>
     										<p>
         										Worked with a team to analyze survey data for Big Grove Brewery and identify the most 
 												strategic customer segments for growth. Using clustering, segmentation analysis, and 
@@ -130,6 +130,19 @@
 											<p>
 												<img src="images/ma_bg_case_award.jpg" alt="Big Grove reps (left) and my Case Team(right: Me, Chase, Ella)" style="width:100%; border-radius:6px;" />
 											</p> 
+										
+										</article>
+
+										<article>
+											<h3>🏆🏈 NFL Team Statistics & Championship Success</h3>
+											<p>
+												This project examines how regular-season NFL performance relates to playoff success and Super Bowl outcomes using team-level data from 2003–2023. We combined regular-season statistics from Kaggle with Super Bowl results from Pro-Football-Reference and applied correlation analysis, linear regression, and logistic regression. The findings show that scoring dominance strongly predicts wins and playoff qualification but becomes much less reliable once teams reach the postseason, where single-game variability plays a larger role. 
+											</p>
+											<p>
+												<a href="Projects/DW_FinalReport.pdf" target="_blank" class="button small">
+													View Project (PDF)
+												</a>
+											</p>
 										</article>
 									</div>
 
