Made homepage icons into links and changed the paragraph.

--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
 											<h1>Hi, I'm Justice Jones</h1>
 											<p>BAIS and Marketing student at the University of Iowa</p>
 										</header>
-										<p>I enjoy working with data, building simple digital products, and finding practical ways to solve real problems. This site highlights some of my coursework, projects, and experiences that show how I think about analytics and product design.</p>
+										<p>
+											This site brings together my coursework, projects, and professional experiences across analytics, marketing, and other industries. As a student at the University of Iowa, I’ve worked on a range of academic, hands-on, and work-based projects that use data to support decision making and marketing strategy. The work highlighted here reflects how I analyze consumer and business data, develop predictive models, and translate insights into clear, actionable recommendations.
+										</p>
 										<ul class="actions">
 											<li><a href="#" class="button big">Learn More</a></li>
 										</ul>
@@ -78,27 +80,33 @@
 									</header>
 									<div class="features">
 										<article>
-											<span class="icon fa-gem"></span>
-											<div class="content">
-												<h3>About Me</h3>
-												<p>Learn a little bit about me, find out where I grew up and what I am intersted in.</p>
-											</div>
+												<a class="tile-link" href="aboutme.html">
+													<span class="icon solid fa-user"></span>
+													<div class="content">
+													<h3>About Me</h3>
+													<p>Learn a little bit about me, find out where I grew up and what I am interested in.</p>
+													</div>
+												</a>
 										</article>
 										<article>
-											<span class="icon solid fa-paper-plane"></span>
-											<div class="content">
+											<a class="tile-link" href="myprojects.html">
+												<span class="icon solid fa-paper-plane"></span>
+												<div class="content">
 												<h3>My Projects</h3>
 												<p>Check out some of the projects I have worked on using various analytical tools and coding languages.</p>
-											</div>
+												</div>
+											</a>
 										</article>
 										<article>
-											<span class="icon solid fa-rocket"></span>
-											<div class="content">
+											<a class="tile-link" href="myresume.html">
+												<span class="icon solid fa-file"></span>
+												<div class="content">
 												<h3>Resume</h3>
 												<p>Information about my work and college experiences and a downloadable pdf resume.</p>
-											</div>
-										</article>	
-										
+												</div>
+											</a>
+										</article>
+							
 										<div id="cookie-popup">
       										<p>
         										By using this site you agree to the storing of cookies on your device to
